--- a/index.html
+++ b/index.html
@@ -63,16 +63,23 @@
       </tr>
     </table>
     <hr/>
-    <form>
-      <input type="text" class="form-control" name="name" ng-model="contact.name" placeholder="Nome do contato">
-      <input type="number" class="form-control" name="tel" ng-model="contact.tel" placeholder="Telefone do contato">
+    <form name="contactForm">
+      <input type="text" class="form-control" name="name" ng-model="contact.name" ng-required="true" placeholder="Nome do contato">
+      <input type="number" class="form-control" name="tel" ng-model="contact.tel" ng-required="true" placeholder="Telefone do contato">
       <select class="form-control" name="operators" ng-model="contact.operators" ng-options="operator.name for operator in operators">
         <option value="">Selecione uma operadora</option>
       </select>
-      <button class="btn btn-primary btn-block" ng-click="addContact(contact)" ng-disabled="!contact.name || !contact.tel">Adicionar Contato</button>
+      <button type="submit" class="btn btn-primary btn-block" ng-click="addContact(contact)" ng-disabled="contactForm.$invalid">Adicionar Contato</button>
       <button class="btn btn-danger btn-block" ng-show="isSelected(contacts)" ng-click="removeContact(contacts)">Apagar contatos</button>
     </form>
+    <div ng-show="contactForm.$invalid" class="alert alert-danger alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      Por favor, preencha o Nome e o Telefone do contato!
+    </div>
   </div>
   <div ng-include="'components/footer.html'"></div>
+
+  <script src="./lib/jquery/jquery-3.5.1.min.js"></script>
+  <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
