--- a/index.html
+++ b/index.html
@@ -4,81 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <title>AngularJS via Rodrigo Branas</title>
-  <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/main.css">
+
+  <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/main.css">
+
   <script src="./lib/angular/angular.min.js"></script>
-  <script>
-    angular.module('listaTelefonica', []);
-    angular.module('listaTelefonica').controller('listaTelefonicaCtrl', function ($scope, $http) {
-
-      const API_URL = 'https://jsonplaceholder.typicode.com/users';
-
-      $scope.title = 'Lista Telefônica';
-      $scope.showForm = false;
-
-      const loadContacts = function () {
-        $http({
-          method: 'GET',
-          url: API_URL
-        }).then(function (response){
-          if (response.status === 200) {
-            $scope.contacts = response.data
-          }
-        }, function (error){
-          console.error(error);
-        });
-      }
-
-      $scope.setShowForm = function () {
-        $scope.showForm = !$scope.showForm;
-      }
-
-      $scope.addContact = function (keyEvent, contact) {
-        if (keyEvent.which === 13) {
-          $http.post(API_URL, contact)
-          .then(function(response) {
-            delete $scope.contact;
-            $scope.showForm = false;
-            $scope.contacts.push(angular.copy(response.data));
-          })
-          .catch(error => {
-            console.error(error)
-          })
-        }
-      }
-
-      $scope.removeContact = function (contacts) {
-        const selectedContacts = contacts.filter(function (contact) {
-          if (contact.selected) return contact;
-        });
-        selectedContacts.map(function(contact) {
-          $http.delete(`${API_URL}/${contact.id}`).then(function (response) {
-            if (response.status === 200) {
-              $scope.contacts = contacts.filter(function (contact) {
-                if (!contact.selected) return contact;
-              });
-            }
-          }, function (response) {
-            console.error('error', response);
-          });
-        })
-      }
-
-      $scope.isSelected = function (contacts) {
-        return contacts.some(function (contact) {
-          return contact.selected;
-        });
-      }
-
-      $scope.orderBy = function(type) {
-        $scope.direction = !$scope.direction
-        $scope.order = type
-      }
-
-      loadContacts()
-    })
-  </script>
+  <script src="./js/app.js"></script>
+  <script src="./js/controllers/listaTelefonicaCtrl.js"></script>
 </head>
 
 <body ng-controller="listaTelefonicaCtrl">
@@ -125,7 +58,7 @@
       </tr>
     </table>
     <hr />
-    <div ng-include="'components/footer.html'"></div>
+    <div ng-include="'view/footer.html'"></div>
   </div>
 
   <script src="./lib/jquery/jquery-3.5.1.min.js"></script>
