--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="./lib/angular/angular.min.js"></script>
   <script src="./js/app.js"></script>
   <script src="./js/controllers/listaTelefonicaCtrl.js"></script>
+  <script src="./js/services/contactsAPIService.js"></script>
 </head>
 
 <body ng-controller="listaTelefonicaCtrl">
